--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color:  #A68F7B;
+  color: #260B01;
   margin: 0;
   padding: 0;
 }
@@ -21,20 +22,22 @@ h6 {
 }
 
 img {
-  width: 100%;
+  width: 50%;
+  float: left;
+}
+
+.owner{
+  clear: left;
+  margin-top: 30pxpx;
 }
 
 .main-nav ul {
+  background-color: #8C4F2B;
   list-style: none;
+  margin: 0;
+  padding: 10px;
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-}
-
-.main-nav ul li {
-  flex: 1;
-  text-align: center;
 }
 
 .main-nav ul li a {
@@ -44,8 +47,12 @@ img {
   font-size: 1.25rem;
 }
 
-form input,
-form textarea {
+.main-nav ul li {
+  flex: 1;
+  text-align: center;
+}
+
+form input, form textarea {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
